--- a/login.html
+++ b/login.html
@@ -18,10 +18,6 @@
 
     <div>
         <form class="form">
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="email">
-            </div>
 
             <div>
                 <label for="user">Nombre de Usuario</label>
@@ -29,21 +25,19 @@
             </div>
 
             <div>
+            <div class="password">
                 <label for="password">Contraseña</label>
+                <a href="#">¿Olvidaste tu contraseña?</a>
+            </div>
                 <input type="password" id="password">
             </div>
 
             <button type="submit"><span>Registrarse</span></button>
 
-            
-
             <img src="imagenes/entrar_con_face.jpg">
             <img src="imagenes/entrar_con_google.jpg">
+
         </form>
-        <div class="container-login">
-            <p>¿Ya tienes una cuenta? <a href="login.html">Iniciar Sesion</a></p>
-        </div>
-        
     </div>
 
     <footer>
