--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <title>ZonaGamer</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <svg>
+        <rect y="5" width="19" height="3" rx="1.5" fill="white" />
+        <rect y="10" width="19" height="3" rx="1.5" fill="white" />
+        <rect width="19" height="3" rx="1.5" fill="white" />
+      </svg>
+      <div class="logoo">
+        <img class="logo" src="./images/zonagamer2.png" alt="logo" />
+      </div>
+      <div class="userr">
+        <img class="user" src="./images/user.png" alt="user" />
+      </div>
+    </header>
+    <nav></nav>
+    <div class="main"></div>
+    <footer></footer>
+  </body>
 </html>
