register y login casi hechos

--- a/html/login.html
+++ b/html/login.html
@@ -17,24 +17,27 @@
 
     <div>
       <form class="form">
-        <div>
-          <label for="user">Nombre de Usuario</label>
+        <div class="user">
+          <label for="user"><b>Nombre de Usuario</b></label>
           <input type="user" id="user" />
         </div>
 
         <div>
           <div class="password">
-            <label for="password">Contraseña</label>
+            <label for="password"><b>Contraseña</b></label>
             <a href="#">¿Olvidaste tu contraseña?</a>
           </div>
           <input type="password" id="password" />
         </div>
 
-        <button type="submit"><span>Registrarse</span></button>
+        <button type="submit"><span><b>Iniciar Sesion</b></span></button>
+      </form>
 
+      <div class="image-container">
         <img src="../images/entrar_con_face.jpg" />
         <img src="../images/entrar_con_google.jpg" />
-      </form>
+      </div>
+      
     </div>
 
     <footer>
@@ -45,6 +48,8 @@
           <p><u>Gestionar Cookies</u></p>
           <p><u>Terminos y condiciones</u></p>
         </div>
+
+        <div class="separator2"></div>
 
         <div>
           <h3>Copyright © 2022 ZONA GAMER | Todos los derechos reservados</h3>
