--- a/html/register.html
+++ b/html/register.html
@@ -17,30 +17,35 @@
 
     <div>
       <form class="form">
-        <div>
-          <label for="email">Email</label>
+        <div class="email">
+          <label for="email"><b>Email</b></label>
           <input type="email" id="email" />
         </div>
 
-        <div>
-          <label for="user">Nombre de Usuario</label>
+        <div class="user" >
+          <label for="user"><b>Nombre de Usuario</b></label>
           <input type="user" id="user" />
         </div>
 
         <div>
-          <label for="password">Contraseña</label>
+          <label for="password"><b>Contraseña</b></label>
           <input type="password" id="password" />
         </div>
 
-        <button type="submit"><span>Registrarse</span></button>
+        <button type="submit"><span><b>Registrarse</b></span></button>
 
+      
+      </form>
+
+      <div class="image-container">
         <img src="../images/entrar_con_face.jpg" />
         <img src="../images/entrar_con_google.jpg" />
-      </form>
-      <div class="container-login">
-        <p>¿Ya tienes una cuenta? <a href="login.html">Iniciar Sesion</a></p>
       </div>
+
     </div>
+      <div class="container-login">
+        <p>¿Ya tienes una cuenta? <a href="login.html"><b>Iniciar Sesion</b></a></p>
+      </div>
 
     <footer>
       <div class="grid-container">
@@ -51,6 +56,8 @@
           <p><u>Terminos y condiciones</u></p>
         </div>
 
+          <div class="separator2"></div>
+        
         <div>
           <h3>Copyright © 2022 ZONA GAMER | Todos los derechos reservados</h3>
         </div>
