arreglo problema medidas header

--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
     <title>ZonaGamer</title>
   </head>
   <body>
-    <header>
-      <svg>
-        <rect y="5" width="19" height="3" rx="1.5" fill="white" />
-        <rect y="10" width="19" height="3" rx="1.5" fill="white" />
-        <rect width="19" height="3" rx="1.5" fill="white" />
-      </svg>
-      <div class="logoo">
-        <img class="logo" src="./images/zonagamer2.png" alt="logo" />
-      </div>
-      <div class="userr">
-        <img class="user" src="./images/user.png" alt="user" />
-      </div>
-    </header>
-    <nav></nav>
-    <div class="main"></div>
-    <footer></footer>
+    <div class="container">
+      <header>
+        <div class="svgg">
+          <svg>
+            <rect y="06" rx="5" fill="white" />
+            <rect y="26" rx="5" fill="white" />
+            <rect y="46" rx="5" fill="white" />
+          </svg>
+        </div>
+
+        <div class="logoo">
+          <img class="logo" src="./images/zonagamer2.png" alt="logo" />
+        </div>
+        <div class="userr">
+          <img class="user" src="./images/user.png" alt="user" />
+        </div>
+      </header>
+      <nav></nav>
+      <div class="main"></div>
+      <footer></footer>
+    </div>
   </body>
 </html>
