mejorando home y register

--- a/html/login.html
+++ b/html/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -29,7 +31,7 @@
           </div>
           <input type="password" id="password" placeholder="Contraseña" />
         </div>
-        <a href="#">¿Olvidaste tu contraseña?</a>
+        <a href="#" >¿Olvidaste tu contraseña?</a>
 
         <button type="submit"><span><b>Iniciar Sesion</b></span></button>
       </form>
@@ -74,8 +76,10 @@
         <p>Chrome</p>
       </div>
       <div class="item">
-        <p>Suscribete a nuestro boletin</p>
+        <b>Suscribete a nuestro boletin</b>
         <p>Para novedades sobre nuestros futuros juegos nuevos pon tu correo electrónico</p>
+        <input class="input-subscribe" placeholder="Introduce tu email">
+        <button>Suscribirse</button>
       </div>
     </div>
   </footer>
