--- a/html/register.html
+++ b/html/register.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -52,8 +55,7 @@
 
     </div>
       <div class="container-login">
-        <p><b>¿Ya tienes una cuenta? <a href="login.html">Iniciar Sesion</b></a></p>
-        
+        <p><b>¿Ya tienes una cuenta? <a href="login.html" class="redirect">Iniciar Sesion</b></a></p>
       </div>
 
     <footer>
@@ -91,8 +93,10 @@
             <p>Chrome</p>
           </div>
           <div class="item">
-            <p>Suscribete a nuestro boletin</p>
+            <b>Suscribete a nuestro boletin</b>
             <p>Para novedades sobre nuestros futuros juegos nuevos pon tu correo electrónico</p>
+            <input class="input-subscribe" placeholder="Introduce tu email">
+            <button>Suscribirse</button>
           </div>
         </div>
       </footer>
