animacion de boton login/register

--- a/html/register.html
+++ b/html/register.html
@@ -44,9 +44,11 @@
           <input type="password2" id="password2" placeholder="Repetir Contraseña"/>
         </div>
 
-        <button type="submit"><span><b>Registrarse</b></span></button>
+        <!--<button type="submit"><span><b>Registrarse</b></span></button> -->
 
       </form>
+
+      <button  class="loginButton" >Registrarse</button>
 
       <div class="image-container">
         <img src="../images/entrar_con_face.jpg" />
@@ -100,5 +102,7 @@
           </div>
         </div>
       </footer>
+
+      <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
