--- a/html/login.html
+++ b/html/login.html
@@ -33,8 +33,11 @@
         </div>
         <a href="#" >¿Olvidaste tu contraseña?</a>
 
-        <button type="submit"><span><b>Iniciar Sesion</b></span></button>
+        
       </form>
+
+      <button  class="loginButton" >Iniciar Sesion</button>
+     
 
       <div class="image-container">
         <img src="../images/entrar_con_face.jpg" />
@@ -84,5 +87,6 @@
     </div>
   </footer>
 
+  <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
