cambios index y intento de armar carrusel

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>ZonaGamer</title>
   </head>
   <body>
@@ -43,7 +49,26 @@
           </svg>
         </div>
       </header>
-      <nav></nav>
+      <nav>
+        <p>Bibloteca</p>
+        <div class="biblioteca">
+          <div class="cardJuegoBibloteca">
+            <img src="../images/batmanvssuperman.jpg" alt="batmanvssuperman" />
+            <p class="recuadroNombre">Batman vs Superman</p>
+            <p class="recuadroNombreGrande">Batman vs Superman</p>
+          </div>
+          <div class="cardJuegoBibloteca">
+            <img src="../images/CandyCrush.png" alt="batmanvssuperman" />
+            <p class="recuadroNombre">Candy Crush</p>
+            <p class="recuadroNombreGrande">Candy Crush</p>
+          </div>
+          <div class="cardJuegoBibloteca">
+            <img src="../images/amongUs.png" alt="batmanvssuperman" />
+            <p class="recuadroNombre">Among Us</p>
+            <p class="recuadroNombreGrande">Among Us</p>
+          </div>
+        </div>
+      </nav>
       <div class="main"></div>
       <footer></footer>
     </div>
