arreglando cosas menores

--- a/html/login.html
+++ b/html/login.html
@@ -33,8 +33,11 @@
         </div>
         <a href="#" >¿Olvidaste tu contraseña?</a>
 
-        
       </form>
+
+      <div class="container-captcha">
+        <img src="../images/captcha2.png" class="captcha">
+      </div>
 
       <button  class="loginButton"><span>Iniciar Sesion</span> </button>
      
