--- a/html/register.html
+++ b/html/register.html
@@ -20,6 +20,15 @@
 
     <div>
       <form class="form">
+
+        <div>
+          <input type="user" id="name"  placeholder="Nombre"/>
+        </div>
+
+        <div>
+          <input type="user" id="surname"  placeholder="Apellido"/>
+        </div>
+        
         <div>
           <input type="user" id="user"  placeholder="Nombre de usuario"/>
         </div>
@@ -33,10 +42,6 @@
         </div>
 
         <div>
-          <input type="email2" id="email2" placeholder="Repetir email"/>
-        </div>
-
-        <div>
           <input type="password" id="password" placeholder="Contraseña"/>
         </div>
 
@@ -47,6 +52,10 @@
         <!--<button type="submit"><span><b>Registrarse</b></span></button> -->
 
       </form>
+   
+      <div class="container-captcha">
+        <img src="../images/captcha2.png" class="captcha">
+      </div>
 
       <button  class="loginButton" >Registrarse</button>
 
