--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,15 @@
         </div>
       </nav>
       <div class="main"></div>
-      <footer></footer>
+      <footer>
+        <div class="cardJuego">
+          <img src="../images/batmanvssuperman.jpg" alt="batmanvssuperman" />
+          <div class="recuadroNombre">
+            <p class="recuadroNombreChico">Batman vs Superman</p>
+            <p class="recuadroNombreGrande">Batman vs Superman</p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
