--- a/html/prueba.html
+++ b/html/prueba.html
@@ -4,30 +4,129 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/prueba.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <title>ZonaGamer</title>
   </head>
+  <!-- Swiper -->
   <body>
     <div class="main">
-      <div class="wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
-        <div class="carousel">
-          <div class="cardJuegoBibloteca">
-            <img src="../images/batmanvssuperman.jpg" alt="batmanvssuperman" />
-            <p class="recuadroNombre">Batman vs Superman</p>
-            <p class="recuadroNombreGrande">Batman vs Superman</p>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-container mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Among Us</p>
+              </div>
+              <div class="card-text">
+                <p>Among Us</p>
+              </div>
+            </div>
           </div>
-          <img src="../images/amongUs.png" alt="img" draggable="false" />
-          <img src="../images/amongUs.png" alt="img" draggable="false" />
-          <img src="../images/amongUs.png" alt="img" draggable="false" />
-          <img src="../images/amongUs.png" alt="img" draggable="false" />
-          <img src="../images/amongUs.png" alt="img" draggable="false" />
-          <img src="../images/amongUs.png" alt="img" draggable="false" />
+          <div class="swiper-slide">
+            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/MarioBros.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/subway.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/FyA.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Among Us</p>
+              </div>
+              <div class="card-text">
+                <p>Among Us</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <i id="right" class="fa-solid fa-angle-right"></i>
       </div>
     </div>
-    <footer></footer>
-
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../js/prueba.js" type="text/javascript"></script>
   </body>
 </html>
