agregando bibloteca en prueba

--- a/html/prueba.html
+++ b/html/prueba.html
@@ -52,6 +52,26 @@
         </svg>
       </div>
     </header>
+    <nav>
+      <p>Bibloteca</p>
+      <div class="biblioteca">
+        <div class="cardJuegoBibloteca">
+          <img src="../images/batmanvssuperman.jpg" alt="batmanvssuperman" />
+          <p class="recuadroNombre">Batman vs Superman</p>
+          <p class="recuadroNombreGrande">Batman vs Superman</p>
+        </div>
+        <div class="cardJuegoBibloteca">
+          <img src="../images/CandyCrush.png" alt="batmanvssuperman" />
+          <p class="recuadroNombre">Candy Crush</p>
+          <p class="recuadroNombreGrande">Candy Crush</p>
+        </div>
+        <div class="cardJuegoBibloteca">
+          <img src="../images/amongUs.png" alt="batmanvssuperman" />
+          <p class="recuadroNombre">Among Us</p>
+          <p class="recuadroNombreGrande">Among Us</p>
+        </div>
+      </div>
+    </nav>
     <h2 class="tipoDeJuego">Articulo</h2>
     <div class="main">
       <div class="swiper-container mySwiper" id="swiper1" data-swiper="1">
@@ -380,7 +400,7 @@
     <footer>
       <footer>
         <div class="image-container2">
-          <img src="../images/logoo.png" />
+          <img src="../images/zonagamer2.png" />
           <img src="../images/secure.png" />
           <img src="../images/master.png" />
           <img src="../images/visa.png" />
