agrego bibloteca y detalles card

--- a/html/prueba.html
+++ b/html/prueba.html
@@ -25,7 +25,6 @@
           <rect y="46" rx="5" fill="white" />
         </svg>
       </div>
-
       <div class="logoo">
         <img class="logo" src="../images/zonagamer2.png" alt="logo" />
       </div>
@@ -86,6 +85,7 @@
               </div>
               <div class="card-text">
                 <p>Among Us</p>
+                <p class="free">FREE</p>
               </div>
             </div>
           </div>
@@ -97,6 +97,7 @@
               </div>
               <div class="card-text">
                 <p>Nombre juego Grande</p>
+                <p class="pay"><span><img src="../images/carrito.png" alt=""></span>$60</p>
               </div>
             </div>
           </div>
