--- a/html/login.html
+++ b/html/login.html
@@ -39,7 +39,7 @@
         <img src="../images/captcha2.png" class="captcha">
       </div>
 
-      <button  class="loginButton" >Registrarse</button>
+      <button  class="loginButton" ><span>Iniciar Sesion</span></button>
 
       <div class="image-container">
         <a href="index.html">
@@ -94,6 +94,7 @@
           <button>Suscribirse</button>
         </div>
       </div>
+      <p>Copyright © 2022 ZONA GAMER | Todos los derechos reservados</p>
     </footer>
   <script src="app.js" type="text/javascript"></script>
   </body>
