--- a/html/register.html
+++ b/html/register.html
@@ -57,7 +57,7 @@
         <img src="../images/captcha2.png" class="captcha">
       </div>
 
-      <button  class="loginButton" >Registrarse</button>
+      <button  class="registerButton"><span>Registrarse</span></button>
 
       <div class="image-container">
         <a href="index.html">
@@ -119,6 +119,7 @@
             <button>Suscribirse</button>
           </div>
         </div>
+        <p>Copyright © 2022 ZONA GAMER | Todos los derechos reservados</p>
       </footer>
 
       <script src="app.js" type="text/javascript"></script>
