boton animacion hecha

--- a/html/login.html
+++ b/html/login.html
@@ -39,7 +39,7 @@
         <img src="../images/captcha2.png" class="captcha">
       </div>
 
-      <button  class="loginButton" ><span>Iniciar Sesion</span></button>
+      <button  class="registerButton fill-button " ><span>Iniciar Sesion</span></button>
 
       <div class="image-container">
         <a href="index.html">
