--- a/html/register.html
+++ b/html/register.html
@@ -57,8 +57,8 @@
         <img src="../images/captcha2.png" class="captcha">
       </div>
 
-      <button  class="registerButton"><span>Registrarse</span></button>
-
+      <button  class="registerButton fill-button ">Registrarse</button>
+ <!--<button class="fill-button">a</button>-->
       <div class="image-container">
         <a href="index.html">
             <img src="../images/entrar_con_face.jpg" class="image-2">
