4 en linea terminado (creo)

--- a/html/4inline.html
+++ b/html/4inline.html
@@ -16,7 +16,7 @@
         </svg>
       </div>
       <div class="logoo">
-        <img class="logo" src="../images/zonagamer2.png" alt="logo" />
+        <a href="index.html"><img class="logo" src="../images/zonagamer2.png" alt="logo" /></a>
       </div>
       <div class="headerDerecha">
         <svg class="carrito" xmlns="http://www.w3.org/2000/svg">
@@ -219,7 +219,7 @@
   <div class="title">
     <h1>Batman VS Superman 4 en linea</h1>
     <div class="share">
-      <svg xmlns="http://www.w3.org/2000/svg" width="56" height="59" viewBox="0 0 56 59" fill="none">
+      <svg xmlns="http://www.w3.org/2000/svg"  class="image-share">
         <path d="M46.25 41.3795C43.9067 41.3795 41.81 42.2612 40.2067 43.6424L18.2225 31.4461C18.3767 30.7701 18.5 30.0942 18.5 29.3888C18.5 28.6835 18.3767 28.0076 18.2225 27.3316L39.96 15.2528C41.625 16.7223 43.8142 17.6333 46.25 17.6333C51.3683 17.6333 55.5 13.6952 55.5 8.81665C55.5 3.93811 51.3683 0 46.25 0C41.1317 0 37 3.93811 37 8.81665C37 9.52199 37.1233 10.1979 37.2775 10.8739L15.54 22.9527C13.875 21.4832 11.6858 20.5722 9.25 20.5722C4.13167 20.5722 0 24.5103 0 29.3888C0 34.2674 4.13167 38.2055 9.25 38.2055C11.6858 38.2055 13.875 37.2944 15.54 35.825L37.4933 48.0508C37.3392 48.6679 37.2467 49.3145 37.2467 49.961C37.2467 54.6926 41.2858 58.5426 46.25 58.5426C51.2142 58.5426 55.2533 54.6926 55.2533 49.961C55.2533 45.2294 51.2142 41.3795 46.25 41.3795Z" fill="#F2F2F2"/>
         </svg>
     </div>
@@ -238,11 +238,11 @@
             </p>
       <div class="controls">
         <h2>Controles</h2>
-        <p>
-            Click izquierdo -> Seleccionar ficha
-            Arrastrar mouse -> Mover ficha
-            Soltar click izquierdo -> Colocar ficha
-        </p>
+            <p> Click izquierdo -> Seleccionar ficha </p>
+            <p>Click izquierdo -> Seleccionar ficha</p>
+            <p>Arrastrar mouse -> Mover ficha</p>
+            <p>Soltar click izquierdo -> Colocar ficha</p>
+        
         </div>
             
         </div>
@@ -320,7 +320,7 @@
                       <p>2 reseñas</p>
                   </div>
                   <div class="separator"></div>
-                  <p class="time-published">Publicado el 14 de septiembre</p>
+                  <p class="time-published">Publicado el 14 de septiembre de 2002</p>
                   <div class="comments">
                       <p class="text2">Juego aburrido, con muchos bugs, que arruina la usabilidad del juego, aunque la idea esta bien planteada, cuando arreglen los inconvenientes probablemente lo vuelva a jugar</p>
                   </div>
