--- a/html/index.html
+++ b/html/index.html
@@ -357,13 +357,13 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="../images/dead_chase.jpg" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Among Us</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Among Us</p>
+                <p>Dead Chase</p>
                 <p class="free">FREE</p>
               </div>
             </div>
@@ -372,10 +372,10 @@
             <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Batman VS Superman</p>
                 <p class="pay">
                   <span>
                     <svg
@@ -404,13 +404,13 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="../images/moto_x3m.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Moto X3M</p>
               </div>
             </div>
           </div>
