--- a/4inline.html
+++ b/4inline.html
@@ -275,10 +275,10 @@
 
     <div class="container-publish">
         <div class="publish">
-            <h2 class="question">¿Qué te pareció el juego?</h2>
+            
             <div class="publish-content">
                 <img src="./images/image_comentario.png" class="image2">
-                <input class="comments" placeholder="hola"></input>
+                <input class="comments" placeholder="¿Que te parecio el juego?"></input>
             </div>
             <div class="info-row">
                 <p class="question2">¿Recomiendas el juego?</p>
