agrgo google Analytics

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D3L13KRHMT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-D3L13KRHMT");
+    </script>
     <title>ZonaGamer</title>
   </head>
   <body>
